--- a/web-server/public/css/login.css
+++ b/web-server/public/css/login.css
@@ -1,3 +1,13 @@
+#loginError {
+    color: rgba(1.0,0.0,0.0);
+    margin-top: 20px;
+    padding: 40px 0px 20px 0px;
+    background-color: #f7f7f7;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
 .form-signin
 {
     max-width: 330px;
