--- a/web-server/public/css/main.css
+++ b/web-server/public/css/main.css
@@ -9,3 +9,10 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#log {
+  background-color:#EFEFEF;
+  color: #333333;
+  width: 100%;
+  height:500px;
+}
