--- a/web-server/public/css/main.css
+++ b/web-server/public/css/main.css
@@ -11,8 +11,10 @@ body {
 }
 
 #log {
-  background-color:#EFEFEF;
+  background: rgba(230,230,230,0.5);
   color: #333333;
-  width: 100%;
+  width: 80%;
   height:500px;
+  margin: auto;
+  padding-top:50px;
 }
