--- a/web-server/public/css/login.css
+++ b/web-server/public/css/login.css
@@ -8,6 +8,10 @@
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
+#channelList {
+    display: none;
+    opacity: 0;
+}
 .form-signin
 {
     max-width: 330px;
