--- a/web-server/public/css/main.css
+++ b/web-server/public/css/main.css
@@ -4,10 +4,23 @@ html {
 }
 
 body {
-  background: url('http://fc00.deviantart.net/fs70/i/2010/070/2/6/Spitfire_by_Baddog2k7.jpg') no-repeat center center fixed;
+  background: url(/images/bg_p38.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+.panel {
+  padding: 10px;
+  background: rgba(174,174,88, 0.75);
+  border-radius:10px;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 #log {
@@ -25,8 +38,22 @@ body {
   background: rgba(230,230,230,0.5);
   color: #333333;
   width: 50%;
-  margin: auto;
+  margin: 0 0 0 0;
   margin-top:20px;
   font-size:20px;
   color: #222222;
+}
+
+.btn-primary {
+  background-color: #005900;
+  border-color: #008900;
+}
+
+.btn-primary:hover {
+  background-color: #78783d;
+  border-color: #78783d;
+}
+
+.game-panel {
+  min-width: 853px;
 }
