--- a/web-server/public/css/messenger.css
+++ b/web-server/public/css/messenger.css
@@ -35,6 +35,7 @@
 
 .player {
   height:24px;
+  line-height: 22px;
 }
 .player-score {
   float:right;
@@ -48,7 +49,7 @@
   margin-left:10px;
   margin-right: 10px;
   width:52px;
-  height:16px;
+  height:22px;
   padding:1px;
   background-color: #000000;
   display: inline-block;
