--- a/web-server/public/css/main.css
+++ b/web-server/public/css/main.css
@@ -14,6 +14,10 @@ body {
   padding: 0;
 }
 
+a {
+  color: #7d4b0c;
+  text-decoration: underline;
+}
 .panel {
   padding: 10px;
   background: rgba(174,174,88, 0.75);
