--- a/web-server/public/css/main.css
+++ b/web-server/public/css/main.css
@@ -18,6 +18,12 @@ a {
   color: #7d4b0c;
   text-decoration: underline;
 }
+
+a:hover {
+  color: #005900;
+  text-decoration: underline;
+}
+
 .panel {
   padding: 10px;
   background: rgba(174,174,88, 0.75);
